test/errors/type_parameters.py
class Foo[T]:
    pass


def f[T](x):
    return x
